# vibe-land

./: .env.example  .gitignore  AGENTS.md  CREDITS.md  Cargo.toml  Makefile  NETCODE_NOTES.md  NOTES.md  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml  r2-publishing.yml
api/: server.ts
api/_lib/: fsStorage.ts  http.ts  r2.ts  r2Storage.ts  storage.ts  turnstile.ts  validate.ts
api/worlds/: [id].ts  config.ts  index.ts  publish.ts
api/worlds/[id]/: screenshot.ts  upload.ts
client/: benchmark-compare.ts  benchmark.ts  index.html  package-lock.json  package.json  playwright.config.ts  simulate.ts  tsconfig.json  vite.config.ts
client/benchmark/: wsWorker.ts
client/e2e/: playwright.config.ts
client/e2e/helpers/: controls.ts  toolkit.ts  types.ts
client/e2e/specs/: multiplayer-smoke.spec.ts  practice-both-destructibles.spec.ts  practice-destructibles.spec.ts  practice-player-walk.spec.ts  practice-smoke.spec.ts  toolkit-ergonomics.spec.ts
client/src/: App.tsx  GameRuntime.ts  analytics.ts  device.ts  e2eBridge.ts  index.css  main.tsx
client/src/ai/: chatHistory.test.ts  chatHistory.ts  chatStore.ts  chatTypes.ts  customStencil.test.ts  customStencil.ts  customStencilStore.ts  localLlm.ts  providers.ts  sandbox.test.ts  sandbox.ts  screenshotTool.ts  settingsStore.ts  speech.ts  splineData.ts  splineMath.ts  systemPrompt.ts  terrainSplineDeform.ts  useGodModeChat.ts  worldDiffSummary.test.ts  worldDiffSummary.ts  worldTool.ts  worldToolHelpers.test.ts  worldToolHelpers.ts
client/src/app/: gameMode.ts  localPlayers.ts  matchId.test.ts  matchId.ts  routes.test.ts  routes.ts  runtimeConfig.test.ts  runtimeConfig.ts  username.ts
client/src/audio/: AudioManager.ts  MusicEngine.ts  SFXEngine.ts  audioSingleton.ts  createSafeDynamicsStage.ts  index.ts
client/src/benchmark/: compare.ts  contracts.ts  defaultSuite.test.ts  defaultSuite.ts  evaluate.test.ts  evaluate.ts  report.ts  spec.ts  vehicleAccumulator.test.ts  vehicleAccumulator.ts  worldPresets.test.ts  worldPresets.ts
client/src/bots/: index.ts  types.ts
client/src/calibration/: CalibrationOverlay.tsx  FirstRunPrompt.tsx  bisect.test.ts  bisect.ts  calibrationWorld.ts  useCalibrationSession.ts
client/src/components/: GameScene.tsx  MobileControls.tsx  Player.tsx
client/src/feedback/: FOVPunch.ts  FeedbackPlayer.ts  GameParticles.ts  Hitstop.ts  ParticlePool.ts  ScreenShake.ts  index.ts
client/src/graphics/: fogSettings.test.ts  fogSettings.ts  weatherAudio.ts  weatherPresets.test.ts  weatherPresets.ts
client/src/input/: arbiter.test.ts  arbiter.ts  bindings.test.ts  bindings.ts  gamepad.test.ts  gamepad.ts  inputSettings.test.ts  inputSettings.ts  inputSettingsStore.ts  keyboardMouse.test.ts  keyboardMouse.ts  manager.ts  pointerLock.ts  resolver.test.ts  resolver.ts  touch.ts  types.ts  usePointerLockEngagement.ts
client/src/interaction/: Interactable.ts  highlightMesh.ts  index.ts  promptLabel.ts
client/src/loadtest/: botSnapshot.test.ts  botSnapshot.ts  brain.test.ts  brain.ts  networkModel.ts  personalityFromScenario.ts  scenario.test.ts  scenario.ts  serverStats.test.ts  serverStats.ts
client/src/net/: debugTelemetry.test.ts  debugTelemetry.ts  gameSocket.ts  interpolation.test.ts  interpolation.ts  localPracticeClient.ts  localPreviewTransport.ts  netcodeClient.test.ts  netcodeClient.ts  protocol.test.ts  protocol.ts  scenarios.test.ts  sharedConstants.ts  testHarness.ts  webTransportClient.ts
client/src/pages/: Gallery.tsx  GodMode.tsx  Home.tsx  HostedWorld.tsx  LoadTest.tsx  ServerStats.tsx  SharedPractice.tsx  godModeEditorDocument.test.ts  godModeEditorDocument.ts  godModeHistory.test.ts  godModeHistory.ts
client/src/physics/: destructibleDebug.ts  destructibleSpatialMetrics.ts  destructibleTuning.ts  determinism.test.ts  dynamicBodyPredictionManager.test.ts  dynamicBodyPredictionManager.ts  jitterReproduction.test.ts  machinePredictionManager.ts  (+8 more)
client/tests/: practice-smoke.ts
docs/: BLAST_INTEGRATION.md  SELF_HOSTING.md  vehicle-netcode-handoff-2026-04-15.md
infra/: .env.example  WEBTRANSPORT_SETUP.md
infra/nginx/: vibe-land.conf
infra/systemd/: vibe-land-api.service  vibe-land-server.service
infra/webtransport-demo/: .gitignore  README.md  diag.go  go.mod  main.go  page.go  webtransport.service
infra/webtransport-tests/: README.md  benchmark-loadtest.mjs  benchmark-play.mjs  package-lock.json  package.json  test-chat2.mjs  test-full.mjs  test-strict-snapshots.mjs
netcode/: Cargo.toml
netcode/src/: clock_sync.rs  lag_comp.rs  lib.rs  movement.rs  physics_arena.rs  seq.rs  sim_world.rs  unit_conv.rs
patches/: blast-stress-solver.patch  blast-wasm-instant.patch
scripts/: blast-pinned-sha.txt  build-shared-wasm.sh  ensure-blast-stub.sh  gen-constants.mjs  generate-demo-world.mjs  install-wasi-sdk.sh  patch-wasi-stubs.mjs  patch-wasm-dtors.mjs  record-practice-proof.mjs  setup-blast.sh  test-r2-e2e.mts  vercel-build.sh
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: demo_world.rs  lag_comp.rs  main.rs  movement.rs  posthog.rs  protocol.rs  voxel_world.rs  world_cache.rs
shared/: Cargo.toml
shared/src/: constants.rs  debug_render.rs  destructibles.rs  destructibles_fracture.rs  destructibles_math.rs  destructibles_native_fallback.rs  destructibles_real.rs  destructibles_stub.rs  lib.rs  local_arena.rs  local_session.rs  local_world.rs  movement.rs  protocol.rs  seq.rs  simulation.rs  snap_machine.rs  snap_machine_controls.rs  terrain.rs  unit_conv.rs  vehicle.rs  wasm_api.rs  world_document.rs
shared/src/physics_arena/: mod.rs  player.rs  spawn.rs  terrain_material_hook.rs  vehicle.rs  vehicle_collision.rs
shared/test-fixtures/: 4-wheel-car.envelope.json  crane.envelope.json
spacetimedb-module/src/: module.ts
stubs/blast-stress-solver-rs/: Cargo.toml
stubs/blast-stress-solver-rs/src/: lib.rs
world/: demo-world.world.json
worlds/: bigger.world.json  broken.world.json  demo-world.world.json  mountain-world.world.json  trail.world.json
(+130 files in other folders)
