[workspace]
members = ["netcode", "shared", "server"]
# Exclude third_party/ from the workspace — it may contain vendored
# crates (e.g. from past PhysX clones) that are not workspace members.
exclude = ["third_party"]
resolver = "2"

[profile.release]
codegen-units = 1

# Local source override for blast-stress-solver while the upstream bug fix
# is pending a crates.io release.  Remove once a fixed version is published.
[patch.crates-io]
blast-stress-solver = { path = "third_party/PhysX/blast/blast-stress-solver-rs" }
