[package]
name = "web-fps-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
bytes = "1"
hex = "0.4"
nalgebra = "0.33"
rcgen = { version = "0.14", features = ["pem"] }
rapier3d = { version = "0.23", features = ["simd-stable"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wtransport = { version = "0.7", features = ["self-signed"] }
