[package]
name = "web-fps-server"
version = "0.1.0"
edition = "2021"

[dependencies]
vibe-netcode = { path = "../netcode", features = ["simd-stable"] }
vibe-land-shared = { path = "../shared", features = ["simd-stable"] }
anyhow = "1"
dotenvy = "0.15"
axum = { version = "0.7", features = ["macros", "ws"] }
bytes = "1"
hex = "0.4"
nalgebra = "0.34"
rcgen = { version = "0.14", features = ["pem"] }
rapier3d = { version = "0.30", features = ["simd-stable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snap-machines-rapier = { git = "https://github.com/Glavin001/snap-machines", rev = "55ea2699bd0eaad8693e2d22987814e367df8511" }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
wtransport = { version = "0.7", features = ["self-signed"] }
