[package]
name = "vibe-land-shared"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
# wasm-opt is run manually by `make client-build` / production CI where
# binaryen is actually available; developer machines and the sandboxed
# claude-code environment cannot always download it. Skip it here so
# `wasm-pack build` works offline.
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vibe-netcode = { path = "../netcode" }
bytes = "1"
nalgebra = "0.34"
rapier3d = { version = "0.30", default-features = false, features = ["dim3", "f32", "debug-render"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
simd-stable = ["rapier3d/simd-stable", "vibe-netcode/simd-stable"]

# Enables the real NVIDIA Blast stress solver backend for destructible
# structures in the wasm build.  Requires a local clone of
# `Glavin001/PhysX` at `third_party/physx/` (see
# `scripts/setup-blast.sh`) AND a wasi C++ toolchain.  When this feature
# is OFF the wasm module still exposes the destructibles JS API, but
# every call is a no-op — useful for CI environments (e.g. Vercel
# preview) that cannot build the C++ backend.
destructibles = ["dep:blast-stress-solver"]

# ─── Destructibles (Blast stress solver) ──────────────────────────────
#
# `blast-stress-solver` is an optional wasm-only dep.  Cargo still
# needs a valid Cargo.toml at the path below during metadata
# resolution, even when the `destructibles` feature is off — so
# `scripts/ensure-blast-stub.sh` drops a tiny placeholder crate there
# whenever `third_party/physx/` is missing (e.g. fresh clones, Vercel
# preview).  On dev boxes `scripts/setup-blast.sh` clones the real
# PhysX over the stub.  See `docs/BLAST_INTEGRATION.md` for the full
# story.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
blast-stress-solver = { path = "../third_party/physx/blast/blast-stress-solver-rs", default-features = false, features = ["scenarios", "rapier"], optional = true }
