[package]
name = "vibe-land-shared"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
# wasm-opt is run manually by `make client-build` / production CI where
# binaryen is actually available; developer machines and the sandboxed
# claude-code environment cannot always download it. Skip it here so
# `wasm-pack build` works offline.
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vibe-netcode = { path = "../netcode" }
bytes = "1"
nalgebra = "0.34"
rapier3d = { version = "0.30", default-features = false, features = ["dim3", "f32", "debug-render"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
simd-stable = ["rapier3d/simd-stable", "vibe-netcode/simd-stable"]

# Enables the real NVIDIA Blast stress solver backend for destructible
# structures in the wasm build.  The `blast-stress-solver` crate is
# published on crates.io with prebuilt wasm32 static libraries, so no
# local PhysX clone or C++ toolchain is required.  When this feature
# is OFF the wasm module still exposes the destructibles JS API, but
# every call is a no-op.
destructibles = ["dep:blast-stress-solver"]

# ─── Destructibles (Blast stress solver) ──────────────────────────────
#
# `blast-stress-solver` is an optional wasm-only dep published on
# crates.io.  The published crate ships prebuilt static libraries for
# wasm32-unknown-unknown so no wasi C++ toolchain is needed — just
# `wasm-pack build --features destructibles`.
#
# When the `destructibles` feature is OFF the wasm module still exposes
# the destructibles JS API via a no-op stub backend.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
blast-stress-solver = { version = "0.1.0", default-features = false, features = ["scenarios", "rapier"], optional = true }
