[package]
name = "vibe-land-shared"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
# wasm-opt is run manually by `make client-build` / production CI where
# binaryen is actually available; developer machines and the sandboxed
# claude-code environment cannot always download it. Skip it here so
# `wasm-pack build` works offline.
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vibe-netcode = { path = "../netcode" }
bytes = "1"
nalgebra = "0.34"
rapier3d = { version = "0.30", default-features = false, features = ["dim3", "f32", "debug-render"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
simd-stable = ["rapier3d/simd-stable", "vibe-netcode/simd-stable"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
blast-stress-solver = { version = "0.3.1", default-features = false, features = ["scenarios", "rapier"] }
